objects/Partner__c.object
<CustomObject>
    <fields>
        <fullName>Agency_NPN__c</fullName>
        <formula>Partner__r.Agency_NPN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency NPN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Partners</relationshipLabel>
        <relationshipName>Partners_Custom</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>51+</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partners</relationshipLabel>
        <relationshipName>Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selling Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>None (Direct Sale)</fullName>
                </value>
                <value>
                    <fullName>Actuary</fullName>
                    <isActive>false</isActive>
                    <label>Actuary</label>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                    <isActive>false</isActive>
                    <label>Administrator</label>
                </value>
                <value>
                    <fullName>Branch Office</fullName>
                    <isActive>false</isActive>
                    <label>Branch Office</label>
                </value>
                <value>
                    <fullName>Client</fullName>
                    <isActive>false</isActive>
                    <label>Client</label>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                    <isActive>false</isActive>
                    <label>Wholesaler</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Partner_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Standard Partner ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <description>This is a custom object to replicate the standard Partner. It is created to support the updates to be sent to Broker Hub(632.0 project). VF page will replace the existing standard Partner 'New' Page.</description>
    <label>Partner</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Partner Custom Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>